Fix JPA Auditing and Security authentication in the core microservice